--- a/Part2/Good.css
+++ b/Part2/Good.css
@@ -1,7 +1,7 @@
 body{
 	margin-left: 5%;
 	margin-right: 5%;
-	background-image: url("BackGround.jpg");
+	background-image: url("Image/BackGround.jpg");
 	background-size: cover;
 }
 
